--- a/css/style.css
+++ b/css/style.css
@@ -67,6 +67,8 @@
 .swiper {
     width: 100%;
     height: 100%;
+    position: relative;
+    z-index: 0;
 }
 .swiper-slide {
     text-align: center;
@@ -309,8 +311,16 @@
 	padding: 14px 10px 14px 10px;
 	box-sizing: border-box;
 }
+main.main{
+    padding-top: 76px;
+}
 .header{
-	border-bottom: 1px solid var(--color-border);
+    border-bottom: 1px solid var(--color-border);
+    position: fixed;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 1;
+    background: white;
 }
 .header__nav-item{
 	list-style-type: none;
@@ -493,6 +503,9 @@
 		width: 767px;
 		padding: 18px 20px 18px 20px;
 	}
+    main.main{
+        padding-top: 96px;
+    }
 	.header__btn-contact-sales{
 		width: 128px;
 		height: 41px;
